objects/PSS_DependantPickval__c.object
<CustomObject>
    <fields>
        <fullName>Sub_Technology_1__c</fullName>
        <description>Sub Technologies associated with Technology</description>
        <label>Sub Technology 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Technology_2__c</fullName>
        <description>Sub Technologies associated with Technology</description>
        <label>Sub Technology 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Technology_3__c</fullName>
        <description>Sub Technologies associated with Technology</description>
        <label>Sub Technology 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Technology__c</fullName>
        <description>Sub technology dependant on Technology</description>
        <label>Sub Technology</label>
        <type>TextArea</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting to hold dependant sub technology based on technology</description>
    <label>PSS_DependentPickval</label>
</CustomObject>